Added the Kaggle API token to Colab Notebook

--- a/Customer_Churn_Prediction.ipynb
+++ b/Customer_Churn_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMY7zv4L4ePI1ZXCJDvnSqL",
+      "authorship_tag": "ABX9TyOZTmMYaQDzIrcyIVlBdhz+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,14 +37,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "DUGGCPbLqwXT"
       },
       "outputs": [],
       "source": [
+        "# Upload your Kaggle API Token\n",
+        "\n",
         "!mkdir -p ~/.kaggle/\n",
-        "!cp kaggle.json ~/.kaggle/"
+        "\n",
+        "# Here /content/Kaggle API Token/kaggle.json this is the path of the Kaggle API Tok\n",
+        "!cp \"/content/Kaggle API Token/kaggle.json\" ~/.kaggle/"
       ]
     },
     {
